--- a/env.example
+++ b/env.example
@@ -11,4 +11,14 @@ VITE_SUPABASE_ANON_KEY=your-anon-key-here
 # VITE_SUPABASE_URL=https://abc123def.supabase.co
 # VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
 
+# Autosave Configuration
+# How long to wait after a change before saving (debounce)
+VITE_AUTOSAVE_DEBOUNCE_MS=8000
+
+# Maximum time between saves (safety net)
+VITE_AUTOSAVE_SAFETY_MS=60000
+
+# Optional: Enable debug logging in production
+# VITE_DEBUG=1
+
 
